.infrastructure/kubernetes/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: itu-minitwit-frontend
  namespace: itu-minitwit-frontend-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: itu-minitwit-frontend
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: itu-minitwit-frontend
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: itu-minitwit-frontend
        image: kongborup/itu-minitwit-frontend
        ports:
          - containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 2
          successThreshold: 1
---
apiVersion: v1
kind: Service
metadata:
  name: itu-minitwit-frontend
  namespace: itu-minitwit-frontend-ns
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: itu-minitwit-frontend
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: itu-minitwit-frontend
  namespace: itu-minitwit-frontend-ns
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - rhododevdron.dk
    secretName: tls-secret
  rules:
  - host: rhododevdron.dk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: itu-minitwit-frontend 
            port:
              number: 80
